--- a/index.html
+++ b/index.html
@@ -822,9 +822,11 @@
 
 <h1 id="welcome-to-hoshinopbs-blog">Welcome to Hoshinopb's Blog</h1>
 <h2 id="_1">主要内容</h2>
-<pre><code>现在什么都没有
+<pre><code>正在建设:
+CTF Web笔记
+密码学笔记
 </code></pre>
-<p>预计包含编程语言、CTF、网络安全等笔记，以及课程学习中的报告。</p>
+<p>预计包含编程语言、CTF、网络安全等笔记，以及课程学习中的实验报告等。</p>
 
 
 
