Deployed  with MkDocs version: 1.6.0

--- a/Tutorial/Cpp/C++/index.html
+++ b/Tutorial/Cpp/C++/index.html
@@ -890,6 +890,7 @@
 
 <h1 id="c">C++自学笔记</h1>
 <p>主要记录在 <a href="https://www.bilibili.com/video/BV1YT411r7mF/">浙江大学朋辈辅学</a> 学习中的C++笔记</p>
+<p>前置知识: C语言程序设计 数据结构</p>
 
 
 
